<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="4"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:weightSum="3"
        android:baselineAligned="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/smart"
                android:textColor="@color/theme"
                android:textSize="28sp"
                android:textStyle="bold"
                android:gravity="end"

                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="28sp"
                android:text="@string/polling"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1">
            <ImageView
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:src="@mipmap/logo_round"
                android:contentDescription="@string/logo"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.8"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/keytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center"
            android:hint="@string/enterkey"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.7"
        android:gravity="center"
        android:weightSum="3">

        <Button
            android:id="@+id/poll_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_rectangle_shape"
            android:onClick="checkKey"
            android:padding="15sp"
            android:text="@string/makepoll"
            android:textColor="@color/white"
            android:textSize="20sp"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom|center"
        android:orientation="vertical"
        android:weightSum="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:autoLink="web"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/link"
            android:textColor="@color/colorAccent"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".1"
            android:gravity="center|bottom"
            android:text="@string/v"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>


</LinearLayout>