<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:gravity="center">
    <ImageView
        android:layout_width="260px"
        android:layout_height="260px"
        android:src="@mipmap/logo_round"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:layout_marginBottom="60px">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/smart"
                android:gravity="right"
                android:textColor="@color/theme"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/polling"
                android:textSize="24sp"
                android:textColor="@color/bla"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/networkcheck">
        <ProgressBar
            android:layout_width="70px"
            android:layout_height="70px"
            android:layout_marginBottom="10px"
            android:indeterminateTint="@color/theme"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/checknetwork"
            android:textColor="@color/theme"/>
    </LinearLayout>
    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/refresh">
        <ImageView
            android:layout_width="70px"
            android:layout_height="70px"
            android:src="@drawable/refresh"
            android:onClick="refresh"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="10px"
            android:text="@string/refresh"
            android:textColor="@color/bla"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/bla"
            android:text="@string/nointernet"
            />
    </LinearLayout>

</LinearLayout>